--- a/app/assets/styles/modules/_row.scss
+++ b/app/assets/styles/modules/_row.scss
@@ -1,11 +1,12 @@
 .row {
 	@include clearfix;
 
-	&--gutters > div {
-		padding-right: 65px;
-		box-sizing: border-box;
+	
+	&--gutters-large{
+		margin-right: -100px;
+		
 	}
-
+	
 	&--gutters {
 		margin-right: -65px;
 	}
@@ -13,6 +14,15 @@
 
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
+	}
+	
+	&--gutters > div {
+		padding-right: 65px;
+		box-sizing: border-box;
+	}
+
+	&--gutters-large > div{
+		padding-right: 100px;
 	}
 
 	@include respond(atMedium) {
@@ -27,6 +37,11 @@
 
 		&__medium-4--larger {
 			width: 37%;
+		}
+		
+		&__medium-6 {
+			float: left;
+			width: 50%;
 		}
 
 		&__medium-8 {
