completed the testimonial section

--- a/app/assets/styles/modules/_section-title.scss
+++ b/app/assets/styles/modules/_section-title.scss
@@ -8,14 +8,20 @@
 	}
 
 	strong {
-		font-weight: 400;
+		font-weight: 500;
 	}
 
+	&--blue{
+		color: $mainBlue;
+	}
+	
 	&__icon {
 		display: block;
 		margin: 0 auto .6rem;
 
 		@include respond(atSmall) {
+			position: relative;
+			top: 9px;
 			margin-right: .5rem;
 			margin-left: 0;
 			margin-bottom: 0;
@@ -23,4 +29,6 @@
 
 		}
 	}
+	
+	
 }
