--- a/app/assets/styles/modules/_page-section.scss
+++ b/app/assets/styles/modules/_page-section.scss
@@ -1,14 +1,40 @@
 .page-section {
-    padding: 1.2rem 0;
+	padding: 1.2rem 0;
 
-    @include respond(at800) {
-        padding: 4.5rem 0;
-    }
+	@include respond(at800) {
+		padding: 4.5rem 0;
+	}
 
-}
+	&--blue {
+		background-color: $mainBlue;
+		color: #fff;
+	}
 
+	&--testimonials {
+		background-color: #e0e6ef;
 
-.page-section__blue {
-    background-color: $mainBlue;
-    color: #fff;
+		@include respond(atLarge) {
+			background: url("/app/assets/images/testimonials-bg.jpg") top center no-repeat;
+			background-size: cover;
+		}
+
+	}
+
+	&--no-b-padding-until-medium {
+		padding-bottom: 0;
+
+		@include respond(atMedium) {
+			padding: 4.5rem 0;
+
+		}
+	}
+	&--no-b-padding-until-largin {
+		padding-bottom: 0;
+
+		@include respond(atLarge) {
+			padding: 4.5rem 0;
+
+		}
+	}
+
 }
