--- a/app/assets/styles/modules/_wrapper.scss
+++ b/app/assets/styles/modules/_wrapper.scss
@@ -1,28 +1,46 @@
 .wrapper {
-    padding-left: 18px;
-    padding-right: 18px;
-    max-width: 1236px;
-    margin: 0 auto;
-    overflow: hidden;
+	padding-left: 18px;
+	padding-right: 18px;
+	max-width: 1236px;
+	margin: 0 auto;
+	overflow: hidden;
 
-    &--medium {
-        max-width: 976px;
-    }
+	&--medium {
+		max-width: 976px;
+	}
 
-    .wrapper {
-        padding-left: 0;
-        padding-right: 0;
-    }
+	.wrapper {
+		padding-left: 0;
+		padding-right: 0;
+	}
 
-    &--b-margin {
-        margin-bottom: 1rem;
-    }
+	&--b-margin {
+		margin-bottom: 1rem;
+	}
 
-    @include respond(atSmall) {
-        &--b-margin {
-            margin-bottom: 3.875rem;
-        }
+	@include respond(atSmall) {
+		&--b-margin {
+			margin-bottom: 3.875rem;
+		}
+	}
 
-    }
+	&--no-padding-until-medium {
+		padding-left: 0;
+		padding-right: 0;
 
+		@include respond(atMedium) {
+			padding-left: 18px;
+			padding-right: 18px;
+		}
+	}
+	
+	&--no-padding-until-large {
+		padding-left: 0;
+		padding-right: 0;
+
+		@include respond(atLarge) {
+			padding-left: 18px;
+			padding-right: 18px;
+		}
+	}
 }
