--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -11,6 +11,7 @@
 @import "modules/_section-title";
 @import "modules/_feature-item";
 @import "modules/_testimonial";
+@import "modules/_site-footer";
 
 
 
