--- a/app/assets/styles/modules/_large-hero.scss
+++ b/app/assets/styles/modules/_large-hero.scss
@@ -1,57 +1,62 @@
 .large-hero {
-    border-bottom: 10px solid $mainBlue;
-    position: relative;
-    
-    &__image{
-        display: block;
-        width: 100%;
-    }
+	border-bottom: 10px solid $mainBlue;
+	position: relative;
 
-    &__text-content {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 0;
-        width: 100%;
-        text-align: center;
-    }
+	&__image {
+		display: block;
+		width: 100%;
+	}
 
-    &__title {
-        font-weight: 300;
-        color: $mainBlue;
-        margin: 0;
-        font-size: 2.4rem;
-        
-        @include respond(at530){
-            font-size: 4.8rem;
-        }
-    
-    }
+	&__text-content {
+		padding-top: 88px;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		width: 100%;
+		text-align: center;
 
-    &__subtitle {
-        font-weight: 300;
-        color: $mainBlue;
-        font-size: 1.5rem;
-        margin: 0;
-        
-        @include respond(at530){
-            font-size: 2.4rem;
-        }
-    }
+		@include respond(atMedium) {
+			padding-top: 60px;
+		}
+	}
 
-    &__description {
-        color: #FFF;
-        font-size: 1.1rem;
-        font-weight: 100;
-        text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
-        max-width: 30rem;
-        margin-left: auto;
-        margin-right: auto;
-        
-         @include respond(at530){
-            font-size: 1.875rem;
-        }
-      
-    }
+	&__title {
+		font-weight: 300;
+		color: $mainBlue;
+		margin: 0;
+		font-size: 2.4rem;
+
+		@include respond(at530) {
+			font-size: 4.8rem;
+		}
+
+	}
+
+	&__subtitle {
+		font-weight: 300;
+		color: $mainBlue;
+		font-size: 1.5rem;
+		margin: 0;
+
+		@include respond(at530) {
+			font-size: 2.4rem;
+		}
+	}
+
+	&__description {
+		color: #FFF;
+		font-size: 1.1rem;
+		font-weight: 100;
+		text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
+		max-width: 30rem;
+		margin-left: auto;
+		margin-right: auto;
+
+		@include respond(at530) {
+			font-size: 1.875rem;
+		}
+
+	}
 
 }
