--- a/app/assets/styles/modules/_site-header.scss
+++ b/app/assets/styles/modules/_site-header.scss
@@ -5,6 +5,8 @@
 	width: 100%;
 	transition: background-color .3s ease-out;
 
+
+
 	&--is-expanded {
 		background-color: rgba($mainBlue, .55);
 		color: red;
@@ -12,7 +14,16 @@
 
 	@include respond(atMedium) {
 		background-color: rgba($mainBlue, .3);
+		position: fixed;
+
+		&--dark {
+			background-color: rgba(23,51,72, .9);
+			border-bottom: 1px solid #efefef;
+
+		}
 	}
+
+
 
 	&__btn-container {
 		@include respond(atMedium) {
@@ -125,11 +136,16 @@
 		left: 50%;
 		transform: translateX(-50%) scale(.8);
 		transform-origin: 50% 0;
+		transition: transform .3s ease-out;
 
 
 		@include respond(atMedium) {
 			left: auto;
 			transform: translateX(0%) scale(1);
+			
+			.site-header--dark &{
+				transform: scale(.55);
+			}
 		}
 
 		&__text-indent {
