--- a/app/assets/styles/modules/_section-title.scss
+++ b/app/assets/styles/modules/_section-title.scss
@@ -15,6 +15,10 @@
 		color: $mainBlue;
 	}
 	
+	&--less-margin{
+		margin-top: 0;
+		margin-bottom: 0;
+	}
 	&__icon {
 		display: block;
 		margin: 0 auto .6rem;
