--- a/app/assets/styles/modules/_modal.scss
+++ b/app/assets/styles/modules/_modal.scss
@@ -2,11 +2,11 @@
 	position: fixed;
 	z-index: 10;
 	background-color: rgba(255, 255, 255, 1);
-	color: #000;
+	color: black;
 	top: 0;
 	bottom: 0;
-	left: 0;
 	right: 0;
+	left: 0;
 	opacity: 0;
 	visibility: hidden;
 	transform: scale(1.2);
@@ -29,7 +29,7 @@
 		text-align: center;
 		font-size: 1.3rem;
 		font-weight: 300;
-		line-height: 1.65;
+		line-height: 1.66;
 	}
 
 	&__close {
