--- a/app/assets/styles/modules/_page-section.scss
+++ b/app/assets/styles/modules/_page-section.scss
@@ -14,10 +14,11 @@
 		background-color: #e0e6ef;
 
 		@include respond(atLarge) {
-			background: url("/app/assets/images/testimonials-bg.jpg") top center no-repeat;
-			background-size: cover;
+			&.lazyloaded {
+				background: url("/app/assets/images/testimonials-bg.jpg") top center no-repeat;
+				background-size: cover;
+			}
 		}
-
 	}
 
 	&--no-b-padding-until-medium {
